--- a/app/templates/navbar.html
+++ b/app/templates/navbar.html
@@ -9,7 +9,7 @@
               <span class="icon-bar"></span>
               <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="/"> <strong style="font-size:40px">Blog Yangu</strong></a>
+            <a class="navbar-brand" href="/"> <strong style="font-size:40px">FANTASY FOOTBALL</strong></a>
           </div>
       
           
