--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -43,6 +43,16 @@
                     <div> {{ registration_form.hidden_tag() }}</div>
                     <div>{{ registration_form.email(class='registrationform',placeholder="Enter your email address") }}</div>
                     <div>{{ registration_form.username(class='registrationform',placeholder="Enter your username") }}</div>
+                    <div>{{registration_form.phone(class="registrationform", placeholder="Enter your phone number")}}</div>
+                    <div>{{registration_form.interest.label}}</div>
+                    <div>{% for subfield in registration_form.interest %}
+                        <tr>
+                            <td>{{ subfield }}</td>
+                            <td>{{ subfield.label }}</td>
+                        </tr>
+                        {% endfor %}
+                    </div> 
+
                     <div>{{ registration_form.password(class='registrationform',placeholder="Enter your password") }}</div>
                     <div>{{ registration_form.password_confirm(class='registrationform',placeholder="Retype your password") }}</div>
                     <div>{{ registration_form.submit(class='submit')}}</div>
