added code for the api request

--- a/app/templates/fixtures.html
+++ b/app/templates/fixtures.html
@@ -15,8 +15,8 @@
                 <div class= "row menu" >
                     <ul class= "menu">
                         <li><a href="{{url_for('main.index')}}">HOME</a></li>
-                        <li><a href="{{url_for('main.live')}}">LIVE SCORE</a></li>
-                        <li><a href="{{url_for('main.fixtures')}}">FIXTURES</a></li>
+                        <li><a href="">LIVE SCORE</a></li>
+                        <li><a href="">FIXTURES</a></li>
                         <li><a href="">CONTACTS</a></li>
                         <li><a href="">NEWS</a></li>
                         <li><a href="">SIGNIN</a></li>
@@ -24,12 +24,9 @@
                 </div>
             </div>
             <div class="column-md-8">
-                <div class="detail">
-                    <h1>FOOTBALL_<span class="color">NOTIFIER</span>.COM</h1>
-                    <hr>
-                    <h3>A WEBSITE TO SEND SMS/EMAIL NOTIFICATIONS ABOUT FOOTBALL DATA | LIVESCORE | FIXTURES | PLAYERS | FOOTBALL NEWS</h3>
-                    <h2><a class="color" href="">SIGNUP TO GET SMS/EMAIL NOTIFICATIONS</a></h2>
-                </div>
+                
+             {{data}}
+               
                 <div class="copyright">
                     <p>&copy;All Rights Reserved, 2019</p>
                 </div>
