--- a/app/templates/livescore.html
+++ b/app/templates/livescore.html
@@ -15,20 +15,25 @@
                 <div class= "row menu" >
                     <ul class= "menu">
                         <li><a href="{{url_for('main.index')}}">HOME</a></li>
-                        <li><a href="{{url_for('main.live')}}">LIVE SCORE</a></li>
-                        <li><a href="{{url_for('main.fixtures')}}">FIXTURES</a></li>
+                        <li><a href="{{url_for('main.index')}}">LIVE SCORE</a></li>
+                        <li><a href="{{url_for('main.index')}}">FIXTURES</a></li>
                         <li><a href="">CONTACTS</a></li>
-                        <li><a href="">NEWS</a></li>
                         <li><a href="">SIGNIN</a></li>
                     </ul>
                 </div>
             </div>
             <div class="column-md-8">
                 <div class="detail">
-                    <h1>FOOTBALL_<span class="color">NOTIFIER</span>.COM</h1>
-                    <hr>
-                    <h3>A WEBSITE TO SEND SMS/EMAIL NOTIFICATIONS ABOUT FOOTBALL DATA | LIVESCORE | FIXTURES | PLAYERS | FOOTBALL NEWS</h3>
-                    <h2><a class="color" href="">SIGNUP TO GET SMS/EMAIL NOTIFICATIONS</a></h2>
+                    {% if data['data']['match'][0]%}
+                    {{data['data']['match'][0]['away_name']}}
+                    {{data['data']['match'][1]['home_name']}}
+                    {{data['data']['match'][2]['score']}}
+                    {{data['data']['match'][3]['time']}}
+                    {{data['data']['match'][4]['status']}}
+                    {%else%}
+                    <h2>No id available</h2>                 
+                    {%endif%}
+                </div>
                 </div>
                 <div class="copyright">
                     <p>&copy;All Rights Reserved, 2019</p>
