--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -42,7 +42,7 @@
     font-family: Averia Gruesa Libre;
     font-size: 43px;
 
-    color: #F2F2F2;
+    color: #23ce6b;
 
     box-sizing: border-box;
 }
