--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -131,3 +131,34 @@ hr{
 .color{
     color:#A4D53C;
 }
+.column-fix {
+    color: #23ce6b;
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+}
+.card {
+    color: #23ce6b;
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+}
+.row {margin: 0 -5px;}
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+@media screen and (max-width: 600px) {
+    .column {
+      width: 100%;
+      display: block;
+      margin-bottom: 20px;
+    }
+  }
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #f1f1f1;
+  }
