--- a/app/templates/fixtures.html
+++ b/app/templates/fixtures.html
@@ -26,12 +26,19 @@
             <div class="column-md-8">
                     <div class="detail">
                             {% for data in data1 %}
-                            <li>{{data.date}}</li>                           
-                            <li>{{data.home_name}}</li>
-                            <li>{{data.away_name}}</li>
-                            <li>{{data.time}}</li>
-         
+                            <div class="row">
+                                    <div class="column">
+                                      <div class="card">
+                                        <h3>{{data.date}}</h3>
+                                        <p>{{data.home_name}}</p>
+                                        <p>{{data.away_name}}</p>
+                                        <p>{{data.time}}</p>
+                                      </div>                                     
+                                    </div>
+                            </div>
+                                
                             {% endfor %}
+
                     </div>
                     </div>
                     <p>&copy;All Rights Reserved, 2019</p>
